# mediscan

./: .gitignore  .hfignore  Dockerfile  README.md  app.html  docker-compose.yml  download_model.py  pyproject.toml  requirements.txt  smoke_test.py
.github/workflows/: ci-cd.yml  lint.yml
mediscan/: __init__.py  api.py  model.py  monitor.py  preprocess.py
tests/: test_mediscan.py
